syntax = "proto3";
package server;

option go_package = "pkg/server";

service FetcherService {
        rpc GetMeasures (GetMeasuresRequest) returns (GetMeasuresResponse);
        rpc AddProbe (AddProbeRequest) returns (AddProbeResponse);
        rpc ListenForChanges (ListenForChangesRequest) returns (stream ListenForChangesResponse);
}

message Measure {
        int32 ID  = 1;
        string URL  = 2;
        int32 interval  = 3;
}

message GetMeasuresRequest {

}

message GetMeasuresResponse {
        repeated Measure measures = 1;
}

enum Change {
        DELETED = 0;
        CREATED = 1;
        EDITED = 2;
}
message ListenForChangesRequest {

}

message ListenForChangesResponse {
        int32 measureID = 1;
        Change change = 2;
        Measure measure = 3;
}

message AddProbeRequest {
        int32 measureID = 1;
        string response = 2;
        float duration = 3;
        int64 createdAt = 4;

}

message AddProbeResponse {
}